--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <ul>
                 <li>Added squad code copy</li>
                             </ul>
-            <a href="download/batch-rename-tool.zip" class="download-btn" download>
+            <a href="download/fcs0.2.8.2" class="download-btn" download>
                 Download
             </a>
         </div>
