--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <li>Added some ui imgs</li>
                 
             </ul>
-            <a href="download/fcs0.2.8.2" class="download-btn" download>
+            <a href="download/fcs0.2.8.2.js" class="download-btn" download>
                Download
             </a>
         </div>
@@ -88,7 +88,7 @@
             <ul>
                 <li>Added squad code copy</li>
                             </ul>
-            <a href="download/fcs0.2.8.2" class="download-btn" download>
+            <a href="download/fcs0.2.8.2.js" class="download-btn" download>
                 Download
             </a>
         </div>
