--- a/index.html
+++ b/index.html
@@ -70,14 +70,13 @@
 
     <div class="container">
         <div class="script-card">
-            <h2>Florr Custom 0.2.8.2</h2>
+            <h2>DamitFlorr2.5</h2>
             <p><b>Unstable</b></p>
-            <ul>
-                <li>Fixed some text-change bugs</li>
-                <li>Added some ui imgs</li>
+            <ul> <li>正式发布</li>
+                
                 
             </ul>
-            <a href="download/fcs0.2.8.2.js" class="download-btn" download>
+            <a href="download/damitFlorr加密版.txt" class="download-btn" download>
                Download
             </a>
         </div>
