--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Florr Custom">
-    <title>Florr Custom</title>
+    <title>Florr Scripts</title>
     <style>
         * {
             margin: 0;
@@ -71,7 +71,7 @@
     <div class="container">
         <div class="script-card">
             <h2>DamitFlorr2.5</h2>
-            <p><b>Unstable</b></p>
+            <p><b>By iw46</b></p>
             <ul> <li>正式发布</li>
                 
                 
@@ -83,7 +83,7 @@
 
         <div class="script-card">
             <h2>Florr Custom 0.2.8</h2>
-            <p><b>Stable</b></p>
+            <p><b>By iw46</b></p>
             <ul>
                 <li>Added squad code copy</li>
                             </ul>
@@ -94,7 +94,7 @@
     </div>
 
     <footer>
-        <p>© 2025 iw46Team(FAKE)</p>
+        <p>© 2025 iw46Team</p>
         <p>Bug report:upiw46@163.com</p>
     </footer>
 </body>
